# py-imouse

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: imouse_api.py
src/imouse/: CONSOLE.md  DEVICE.md  __init__.py  payload.py  types.py
src/imouse/console/: __init__.py  airplay.py  device.py  group.py  mouse.py  usb.py
src/imouse/device/: __init__.py  action.py  keyboard.py  mouse.py  shortcut.py  storage.py  utility.py
tests/: device_api.test.py  take_a_screenshot.test.py
