[build-system]
requires = ["setuptools>=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-imouse"
version = "0.1.0"
description = "Python mouse control and automation library"
requires-python = ">=3.8"
authors = [
    {name = "Jing Chen"}
]
dependencies = [
    "requests>=2.32.4",
    "urllib3==1.26.15",
    "websocket-client>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=py_imouse"
